--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>FANT</h1>
-        <div class="user">steffen</div>
+        <div class="login" id="buttonOrUser"></div>
     </header>
     <hr>
 
