Started work on the create new item form

--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
     <hr>
 
     <section class="container">
-
+        <form class="no-grid">
+            <label for="title">Title</label>
+            <input type="text" id="title">
+            <label for="price">Price</label>
+            <input type="num" id="price">
+            <label for="description">Description</label>
+            <textarea id="description">Description here please</textarea>
+            <label for="picture">Images</label>
+            <input type="file" id="picture">
+        </form>
     </section>
 
-    <script src="./src/main.js">
-    </script>
+    <!-- <script src="./src/main.js">
+    </script> -->
 </body>
 
 </html>
