--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>FANT</h1>
+        <h1 id="logo"><a href="#" id="home">FANT</a></h1>
         <div class="login" id="buttonOrUser"></div>
     </header>
     <hr>
