--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="container">
     </section>
-    <script src="./src/main.js">
+    <script src="./src/main.js" type="module">
     </script>
 </body>
 
